Removing padding from list under "Reasons to Use HERON"
--HG--
branch : ux_update_4809

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -140,18 +140,20 @@
   
   <div><h2>Reasons to use HERON</h2>
   <style>
-  ol.nomargin{margin:0 0 -1em 3em;}
+  ol.nomargin{margin:0 0 -1em 0em;}
+  li.nomargin{margin:0 0 -1em 0em;}
+  ul.nomargin{margin:0 0 -1em 0em;}
   </style>
   <ol class = "nomargin">
-	<li>Search HERON to find the number of KUMC patients who meet inclusion/exclusion criteria
-		<ul><li>Useful for grant applications and feasibility counts</li></ul></li>
-	<li>Request de-identified datasets
-		<ul> <li>No IRB approval needed </li></ul></li>
-	<li>Request identified datasets
-		<ul> <li>Will require IRB approval or QI letter of determination from the IRB </li></ul></li>
-	<li>Receive data on patients in a research study
-		<ul><li>Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
-	<li>Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
+	<li class = "nomargin">Search HERON to find the number of KUMC patients who meet inclusion/exclusion criteria
+		<ul class = "nomargin"><li class = "nomargin">Useful for grant applications and feasibility counts</li></ul></li>
+	<li class = "nomargin">Request de-identified datasets
+		<ul class = "nomargin"> <li class = "nomargin">No IRB approval needed </li></ul></li>
+	<li class = "nomargin">Request identified datasets
+		<ul class = "nomargin"> <li class = "nomargin">Will require IRB approval or QI letter of determination from the IRB </li></ul></li>
+	<li class = "nomargin">Receive data on patients in a research study
+		<ul class = "nomargin"><li class = "nomargin">Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
+	<li class = "nomargin">Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
   </ol>
 	</div>
 
