Updating spacing under "Reasons to Use HERON"
--HG--
branch : ux_update_4809

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -141,8 +141,8 @@
   <div><h2>Reasons to use HERON</h2>
   <style>
   ol.nomargin{margin:0 0 -1em 0em;}
-  li.nomargin{margin:0 0 -1em 0em;}
-  ul.nomargin{margin:0 0 -1em 0em;}
+  li.nomargin{margin:0 0 0em 3em;}
+  ul.nomargin{margin:0.5em 0 -0.5em 0em;}
   </style>
   <ol class = "nomargin">
 	<li class = "nomargin">Search HERON to find the number of KUMC patients who meet inclusion/exclusion criteria
