Clarfied button names and capitalized "search"
--HG--
branch : ux_update_4809

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -13,11 +13,11 @@
   <ul>
     <li py:if="'checked' in repositoryAccess">
       <a href="${i2b2_login_path}"
-        ><font size = "4">Start HERON search</font></a>
+        ><font size = "4">Start HERON Search</font></a>
     </li>
     <li py:if="'checked' not in repositoryAccess">
       <button disabled="disabled"
-        ><font size = "4">Start HERON search</font></button>
+        ><font size = "4">Start HERON Search</font></button>
     </li>
   </ul>
   </div>
@@ -36,7 +36,7 @@
 	</li>
 	<li><a href="http://frontiersresearch.org/frontiers/HERON-data-receipt" target = "_blank">Understanding HERON Data</a>
 	</li>
-	<li><a href="http://frontiersresearch.org/frontiers/participant-registry" target = "_blank">Frontiers and Pioneers Participant Recruitment Registries</a>
+	<li><a href="http://frontiersresearch.org/frontiers/participant-registry" target = "_blank">Frontiers and Pioneers Participant Recruitment Registry Information</a>
 	</li>
   </ul>
   </div>
@@ -55,7 +55,7 @@
   <ul>
     <li><a href="${sponsorship_path}">HERON Sponsorship Request</a>
     </li>
-    <li><a href="${data_use_path}">HERON Data Usage Request</a>
+    <li><a href="${data_use_path}">HERON Data Request</a>
     </li>
 	<li><a href="https://redcap.kumc.edu/surveys/?s=XdYZugkaqN&amp;principal_investigator=${affiliate.givenname}&amp;principal_investigator_las=${affiliate.sn}&amp;department=${affiliate.ou}&amp;email_address=${affiliate.mail}">Frontiers Participant Registry (RRRC) Request</a>
 	</li>
