Changed other tool section to be available to all users, not only the DROC
--HG--
branch : ux_update_4809

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -81,7 +81,7 @@
   </ul>
   </div>
   
-  <div py:if="droc" class="header png"><h3>Other Tools</h3>
+  <div class="header png"><h3>Other Tools</h3>
   <ul>
     <li>
       <a href="reports/usage">HERON Usage Report</a>
