--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -24,19 +24,19 @@
 
   <div class="header png"><h3>Online Training</h3>
   <ul>
-	<li><a href="http://frontiersresearch.org/frontiers/HERON-Introduction" target = "_blank">HERON Introduction</a>
+	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron.html" target = "_blank" title ="HERON Introduction">HERON Introduction</a>
     </li>
-	<li><a href="http://frontiersresearch.org/frontiers/HERON-FAQs" target = "_blank">HERON FAQ</a>
+	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/faqs.html" target = "_blank" title = "HERON FAQ">HERON FAQs</a>
 	</li>
-	<li><a href="http://frontiersresearch.org/frontiers/informatics-training-videos" target = "_blank">HERON Training Videos</a>
+	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/heron-training-videos.html" target = "_blank" title = "HERON training videos">HERON Training Videos</a>
 	</li>
-	<li><a href="http://frontiersresearch.org/frontiers/sites/default/files/frontiers/HERON%20Guide_20170616.pdf" target = "_blank">HERON Training Manual</a>
+	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/heron-manual.html" target = "_blank" title = "HERON Guide">HERON Guide</a>
 	</li>
-	<li><a href="http://frontiersresearch.org/frontiers/data-set-instructions" target = "_blank">Data Request Process</a>
+	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/requesting-data.html" target = "_blank" title = "Requesting Data">Data Request Process</a>
 	</li>
-	<li><a href="http://frontiersresearch.org/frontiers/HERON-data-receipt" target = "_blank">Understanding HERON Data</a>
+	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/receiving-data.html" target = "_blank" title = "Receiving Data">Understanding HERON Data</a>
 	</li>
-	<li><a href="http://frontiersresearch.org/frontiers/participant-registry" target = "_blank">Frontiers and Pioneers Participant Recruitment Registry Information</a>
+	<li><a href="http://www.kumc.edu/ea-mi/medical-informatics/heron/frontierspioneers-registries.html" target = "_blank" title = "Recruitment Registries">Frontiers and Pioneers Participant Recruitment Registry Information</a>
 	</li>
   </ul>
   </div>
@@ -89,7 +89,7 @@
     <li>
       <a href="reports/performance">Current HERON Users and Recent Query Performance</a>
     </li>
-    <li><a href="https://redcap.kumc.edu/" target = "_blank">REDCap</a></li>
+    <li><a href="https://redcap.kumc.edu/" target = "_blank" title = "REDCap">REDCap</a></li>
   </ul>
   </div>
   </div>
@@ -131,7 +131,7 @@
   <td align = "center" valign = "center">
   <br /><img src="av/220px-Heron_tricol_01.JPG" alt="" />
   <br /><small>photo credit:
-  <a href="http://commons.wikimedia.org/wiki/User:Chrharshaw"
+  <a href="http://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia"
      >Christopher Harshaw</a></small>
   </td>
   </tr>
@@ -152,7 +152,7 @@
 	<li class = "nomargin">Request identified datasets
 		<ul class = "nomargin"> <li class = "nomargin">Will require IRB approval or QI letter of determination from the IRB </li></ul></li>
 	<li class = "nomargin">Receive data on patients in a research study
-		<ul class = "nomargin"><li class = "nomargin">Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
+		<ul class = "nomargin"><li class = "nomargin">Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top" title = "email heron-admin">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
 	<li class = "nomargin">Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
   </ol>
 	</div>
@@ -170,32 +170,35 @@
     <div><h2>HERON Sponsorship Process</h2>
 	<p> Only faculty members may submit a sponsorship request. </p>
   <ol>
-  <li>Faculty members should visit <a href = "https://heron.kumc.edu/heron"> HERON</a> using the KUMC network or using a <a href = "https://kumed.sharepoint.com/sites/mykumc/ir/Pages/Remote-Access-to-KUMC-Resources.aspx?wa=wsignin1.0"> KUMC VPN connection </a></li>
+  <li>Faculty members should visit <a href = "https://heron.kumc.edu/heron" title = "HERON"> HERON</a> using the KUMC network or using a 
+  <a href = "https://kumed.sharepoint.com/sites/mykumc/ir/Pages/Remote-Access-to-KUMC-Resources.aspx?wa=wsignin1.0" title = "Access-to-KUMC-Resources"> KUMC VPN connection </a></li>
   <li>Follow the "HERON Sponsorship Request" under Investigator Resources</li>
   <li>Enter the id(s) for sponsoree(s)</li>
   <li>Complete the following form and click submit</li>
   </ol>
-	<p>Sponsorship requests take approximately one week to be approved. Once approved, users can begin searching HERON. More detailed instructions are found on our <a href = "http://frontiersresearch.org/frontiers/HERON-Sponsorship">Frontiers Training Pages</a>. </p>
+	<p>Sponsorship requests take approximately one week to be approved. Once approved, users can begin searching HERON. More detailed instructions are found on our 
+	<a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/sponsorship.html" title ="Sponsorship">HERON Training Pages</a>. </p>
   </div>
   
   <div><h2>HERON Data Request Process</h2>
   <p>After completing a HERON query, users may request identified or de-identified data. Identified data requires IRB approval or a QI letter of determination from the IRB.
   Faculty or non-faculty members may create the query. However, only faculty members may submit a data request.</p>
   <ol>
-  <li>Faculty members should visit <a href = "https://heron.kumc.edu/heron"> HERON</a> using the KUMC network or using a <a href = "https://kumed.sharepoint.com/sites/mykumc/ir/Pages/Remote-Access-to-KUMC-Resources.aspx?wa=wsignin1.0" target = "_blank"> KUMC VPN connection </a></li>
+  <li>Faculty members should visit <a href = "https://heron.kumc.edu/heron" title = "HERON"> HERON</a> using the KUMC network or using a 
+  <a href = "https://kumed.sharepoint.com/sites/mykumc/ir/Pages/Remote-Access-to-KUMC-Resources.aspx?wa=wsignin1.0" target = "_blank" title = "Access-to-KUMC-Resources"> KUMC VPN connection </a></li>
   <li>Follow the "HERON Data Request" under Investigator Resources</li>
   <li>Enter the id(s) for all individuals needing access to the HERON data</li>
   <li>Add all individuals and click "done choosing people"</li>
   <li>Complete the following form and click submit</li>
   </ol>
 	<p>Data requests take approximately two weeks for approval and the release of data to the study team. All individuals needing access to the data must sign the <a href="https://heron.kumc.edu/heron/dua_survey">data use agreement</a> prior to release of data. 
-	More detailed instructions are found on our <a href = "http://frontiersresearch.org/frontiers/data-set-instructions" target = "_blank">Frontiers Training Pages</a>. </p>
+	More detailed instructions are found on our <a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/requesting-data.html" target = "_blank" title = "Requesting Data">HERON Training Pages</a>. </p>
   </div>
   
   <div><h2>More Information</h2>
   <ul>
 	<li>KUMC participates in the <a href = "http://www.gpcnetwork.org/" target = "_blank"> Greater Plains Collaborative (GPC) </a> which is a network of 12 leading medical centers in 8 states. The network brings together data on over 16 million patients. Investigators from KUMC are able to request data from participating sites. </li>
-	<li>Patient recruitment is possible through the <a href = "http://frontiersresearch.org/frontiers/participant-registry" target = "_blank"> Frontiers and Pioneers Research Registries</a>.</li>
+	<li>Patient recruitment is possible through the <a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/frontierspioneers-registries.html" target = "_blank" title = "Recruitment Registries"> Frontiers and Pioneers Research Registries</a>.</li>
 	<li>HERON data has been cited in several <a href="http://frontiersresearch.org/frontiers/node/452" target = "blank">publications</a>.</li>
 	<li>HERON is supported in part by funds from CTSA Award #UL1TR000001 and Patient-Centered Outcomes Research Institute (PCORI) Program Award #CDRN-1306-04631.</li>
 	</ul>
@@ -293,8 +296,9 @@
         <h3>Citing HERON</h3>
       </div>
       <div class="content png">
-	  <p>Any publication that results from a project utilizing HERON should cite grant support (<strong>CTSA Award # UL1TR000001</strong>) and <strong>HERON</strong>:</p>
+	  <p>Any publication that results from a project utilizing HERON should cite grant support and HERON:</p>
         <ul class="links">
+		<li><cite><a href = "http://www.kufrontiers.org/about/citing-frontiers.html" title = "CTSA Citation">CTSA Award # UL1TR002366</a> 
 	<li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3243191/">
     Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.</a></cite><br/>
   Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
@@ -308,7 +312,7 @@
   J Am Med Inform Assoc. 2010 Mar-Apr;17(2):124-30. doi: 10.1136/jamia.2009.000893.
   </li>
   </ul>
-  <p>Publications referencing <strong>HERON</strong> and the <strong>Greater Plains Collaborative</strong> (GPC) should also cite the GPC:</p>
+  <p>Publications referencing HERON and the Greater Plains Collaborative (GPC) should also cite the GPC:</p>
 
   <ul>
   <li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4078294/">
