--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -298,7 +298,7 @@
       <div class="content png">
 	  <p>Any publication that results from a project utilizing HERON should cite grant support and HERON:</p>
         <ul class="links">
-		<li><cite><a href = "http://www.kufrontiers.org/about/citing-frontiers.html" title = "CTSA Citation">CTSA Award # UL1TR002366</a> 
+		<li><cite><a href = "http://www.kufrontiers.org/about/citing-frontiers.html" title = "CTSA Citation">CTSA Award # UL1TR002366</a></cite> </li>
 	<li><cite><a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3243191/">
     Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.</a></cite><br/>
   Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
