Clarify user should submit problem report #5294 Thanks, Dan for the review!

--- a/heron_wsgi/templates/oops.html
+++ b/heron_wsgi/templates/oops.html
@@ -14,17 +14,15 @@
 <p>Sorry, we're having trouble with your request.</p>
 
 <!-- todo: factor feedback survey address out of templates -->
-<p>Notification of the problem should be on its way to our staff, but
-if you would like to provide more information, we have a <a href=
+<p>Please submit this <a href=
 "https://redcap.kumc.edu/surveys/?s=3SBkPg&amp;tool=1&amp;problem=HERON+web+site+crash:${error_info}"
->problem report</a> started for you.</p>
+>problem report</a> to notify our team of the issue. The details in the report will help our team fix the error. </p>
 
 <hr />
 <address>
 The HERON Team <a href="mailto:${admin_mailbox}">${admin_mailbox}</a><br />
 <a href="http://informatics.kumc.edu">Division of Medical Informatics</a>,<br />
-<a href="http://biostatistics.kumc.edu">Department of Biostatistics</a>,<br />
-<a href="http://www.kumc.edu">University of Kansas Medical Center</a>
+<a href="http://www.kumc.edu/miea.html">KUMC Center for Medical Informatics and Enterprise Analytics</a>,<br />
 </address>
 </body>
 </html>
