--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -50,30 +50,22 @@
   </ul>
   </div>
 
-  <div py:if="affiliate.is_investigator()" class="header png">
-    <h3>Investigator Requests</h3>
+  <div class="header png">
+    <h3>Regulatory Requests</h3>
   <ul>
     <li><a href="${sponsorship_path}">HERON Sponsorship Request</a>
     </li>
     <li><a href="${data_use_path}">HERON Data Request</a>
     </li>
-	<li><a href="https://redcap.kumc.edu/surveys/?s=XdYZugkaqN&amp;principal_investigator=${affiliate.givenname}&amp;principal_investigator_las=${affiliate.sn}&amp;department=${affiliate.ou}&amp;email_address=${affiliate.mail}">Frontiers Participant Registry (RRRC) Request</a>
-	</li>
+    <li py:if="affiliate.is_investigator()" >
+      <a href="https://redcap.kumc.edu/surveys/?s=XdYZugkaqN&amp;principal_investigator=${affiliate.givenname}&amp;principal_investigator_las=${affiliate.sn}&amp;department=${affiliate.ou}&amp;email_address=${affiliate.mail}">Frontiers Participant Registry (RRRC) Request</a>
+    </li>
+    <li py:if = "not affiliate.is_investigator()">
+      <button disabled="disabled">Frontiers Participant Registry (RRRC) Request</button>
+    </li>
   </ul>
   </div>
   
-    <div py:if = "not affiliate.is_investigator()" class="header png">
-    <h3>Investigator Requests</h3>
-  <ul>
-    <li><button disabled="disabled">HERON Sponsorship Request</button>
-    </li>
-    <li> <button disabled="disabled">HERON Data Request</button>
-    </li>
-	<li><button disabled="disabled">Frontiers Participant Registry (RRRC) Request</button>
-	</li>
-  </ul>
-  </div>
-
   <div py:if="droc" class="header png"><h3>Oversight</h3>
   <ul>
     <li><a href="https://redcap.kumc.edu/redcap_v4.7.0/index.php?pid=238">DROC Review Forms</a></li>
