--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -115,6 +115,7 @@
 
 <form py:if="candidates or studyTeam" method="get" action="">
   <hr />
+  <h4><em>Please Select...</em></h4>
 ${studyTeamTable(studyTeam)}
 ${peopleTable(candidates, 'a')}
   <p>
