allow executives as team sponsors

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -30,6 +30,7 @@
     <td>
       ${who.title}<br />
       <strong py:if="who.faculty_role()">Faculty</strong>
+      <strong py:if="who.cn in executives">Executive</strong>
     </td>
     <td>${who.ou}</td>
   </tr>
