--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -57,6 +57,8 @@
     </li>
     <li><a href="${data_use_path}">HERON Data Request</a>
     </li>
+    <li><a href="${act_sponsorship_path}">ACT SHRINE Sponsorship Request</a>
+    </li>
     <li py:if="affiliate.is_investigator()" >
       <a href="https://redcap.kumc.edu/surveys/?s=XdYZugkaqN&amp;principal_investigator=${affiliate.givenname}&amp;principal_investigator_las=${affiliate.sn}&amp;department=${affiliate.ou}&amp;email_address=${affiliate.mail}">Frontiers Participant Registry (RRRC) Request</a>
     </li>
