--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -59,6 +59,8 @@
     </li>
     <li><a href="${act_sponsorship_path}">ACT SHRINE Sponsorship Request</a>
     </li>
+    <li><a href="${greenheron_use_path}">Green HERON Sponsorship or Data Use Request</a>
+    </li>
   </ul>
   </div>
   
