update request requirements

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -172,7 +172,7 @@
   
   <div><h2>HERON Data Request Process</h2>
   <p>After completing a HERON query, users may request identified or de-identified data. Identified data requires IRB approval or a QI letter of determination from the IRB.
-  Faculty or non-faculty members may create the query. However, only faculty members may submit a data request.</p>
+  Faculty or non-faculty members may create the query. However, non-faculty members will need a faculty sponsor.</p>
   <ol>
   <li>Faculty members should visit <a href = "https://heron.kumc.edu/heron" title = "HERON"> HERON</a> using the KUMC network or using a 
   <a href = "https://kumed.sharepoint.com/sites/mykumc/ir/Pages/Remote-Access-to-KUMC-Resources.aspx?wa=wsignin1.0" target = "_blank" title = "Access-to-KUMC-Resources"> KUMC VPN connection </a></li>
