--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -121,7 +121,7 @@
   <td align = "center" valign = "center">
   <br /><img src="av/220px-Heron_tricol_01.JPG" alt="" />
   <br /><small>photo credit:
-  <a href="http://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia"
+  <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia"
      >Christopher Harshaw</a></small>
   </td>
   </tr>
@@ -187,7 +187,7 @@
   
   <div><h2>More Information</h2>
   <ul>
-	<li>KUMC participates in the <a href = "http://www.gpcnetwork.org/" target = "_blank"> Greater Plains Collaborative (GPC) </a> which is a network of 12 leading medical centers in 8 states. The network brings together data on over 16 million patients. Investigators from KUMC are able to request data from participating sites. </li>
+	<li>KUMC participates in the <a href = "https://www.gpcnetwork.org/" target = "_blank"> Greater Plains Collaborative (GPC) </a> which is a network of 12 leading medical centers in 8 states. The network brings together data on over 16 million patients. Investigators from KUMC are able to request data from participating sites. </li>
 	<li>Patient recruitment is possible through the <a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/frontierspioneers-registries.html" target = "_blank" title = "Recruitment Registries"> Frontiers and Pioneers Research Registries</a>.</li>
 	<li>HERON data has been cited in several <a href="http://frontiersresearch.org/frontiers/node/452" target = "blank">publications</a>.</li>
 	<li>HERON is supported in part by funds from CTSA Award #UL1TR000001 and Patient-Centered Outcomes Research Institute (PCORI) Program Award #CDRN-1306-04631.</li>
