#6562 update HERON website

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -7,7 +7,7 @@
   <title>HERON Research Data Repository</title>
 </head>
 <!-- todo: consider passing admin_mailbox in from python -->
-<body py:with="admin_mailbox='heron-admin@kumc.edu'">
+<body py:with="admin_mailbox='misupport@kumc.edu'">
   <div id="menu">
   <div class="header png"><h2>Use HERON Query and Analysis Tool</h2>
   <ul>
@@ -45,7 +45,7 @@
   <ul>
 	<li><a href="https://redcap.kumc.edu/surveys/?s=L72oqA" target = "_blank" >Lunch and Learn Clinic</a>
 	</li>
-	<li><a href="https://redcap.kumc.edu/surveys/?s=qYxMmb" target = "_blank">Request a Consultation</a>
+	<li><a href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A" target = "_blank">Office Hours</a>
 	</li>
   </ul>
   </div>
@@ -99,30 +99,16 @@
 
   <!-- TODO: why does this para turn blue? -->
   <p>HERON (Healthcare Enterprise Repository for Ontological Narration) is a search discovery tool that allows KUMC faculty members to search de-identified data 
-  from various hospital and medical center sources. By combining the various data sources, researchers can look at the data in new ways not available when viewing data in one source at a time. Data sources include but are not limited to:
+  from various hospital and medical center sources including Epic/O2 (the hospital electronic medical record). By combining the various data sources, researchers 
+  can look at the data in new ways not available when viewing data in one source at a time.
   </p>  
 
   <table cellpadding = "30">
   <tr>
-  <td valign = "top">
-  <ul>
-		<li>Cardiovascular Registry</li>
-		<li>Cystic Fibrosis Registry</li>
-		<li>Epic/O2 (the hospital electronic medical record)</li>
-		<li>IDX (the clinical billing system)</li>
-		<li>KU Hospital Cancer Registry</li>
-		<li>KU Biospecimen Repository</li>
-		<li>REDCap (selected projects)</li>
-		<li>Social Security Death Index</li>
-		<li>Trauma Registry</li>
-		<li>Vizient (Quality Measure Data - formerly University HealthSystem Consortium)</li> 
-	</ul>
-  </td>
   <td align = "center" valign = "center">
   <br /><img src="av/220px-Heron_tricol_01.JPG" alt="" />
   <br /><small>photo credit:
-  <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia"
-     >Christopher Harshaw</a></small>
+  <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia">Christopher Harshaw</a></small>
   </td>
   </tr>
   </table> 
@@ -142,7 +128,7 @@
 	<li class = "nomargin">Request identified datasets
 		<ul class = "nomargin"> <li class = "nomargin">Will require IRB approval or QI letter of determination from the IRB </li></ul></li>
 	<li class = "nomargin">Receive data on patients in a research study
-		<ul class = "nomargin"><li class = "nomargin">Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top" title = "email heron-admin">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
+		<ul class = "nomargin"><li class = "nomargin">Please contact <a href ="mailto:misupport@kumc.edu" target = "_top" title = "email heron-admin">misupport@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
 	<li class = "nomargin">Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
   </ol>
 	</div>
@@ -157,15 +143,22 @@
   </ol>
 	  </div>
 
-    <div><h2>HERON Sponsorship Process</h2>
-	<p> Only faculty members may submit a sponsorship request. </p>
-  <ol>
-  <li>Faculty members should visit <a href = "https://heron.kumc.edu/heron" title = "HERON"> HERON</a> using the KUMC network or using a 
-  <a href = "https://kumed.sharepoint.com/sites/mykumc/ir/Pages/Remote-Access-to-KUMC-Resources.aspx?wa=wsignin1.0" title = "Access-to-KUMC-Resources"> KUMC VPN connection </a></li>
-  <li>Follow the "HERON Sponsorship Request" under Investigator Resources</li>
-  <li>Enter the id(s) for sponsoree(s)</li>
-  <li>Complete the following form and click submit</li>
-  </ol>
+  <div><h2>HERON Sponsorship Process</h2>
+	<p> Faculty members are automatically sponsored for HERON. Non-faculty researchers will need to have a sponsorship request submitted and approved by a faculty member. </p>
+  <p><span style="text-decoration: underline;">Faculty member sponsoring non-faculty:</span></p>
+    <ul>
+      <li>Click "HERON Sponsorship Request" under Regulatory Requests.</li>
+      <li>Enter the first / last name or username for sponsoree(s).</li>
+      <li>Select "done choosing people".</li>
+      <li>Complete the following form and click submit.</li>
+    </ul>
+  <p><span style="text-decoration: underline;">Non-faculty member requesting sponsorship:</span></p>
+    <ul>
+      <li>Click "HERON Sponsorship Request" under Regulatory Requests.</li>
+      <li>Enter the first / last name or username for faculty sponsor and any other sponsorees.</li>
+      <li>Select "done choosing people".</li>
+      <li>Complete the following form and click submit.</li>
+    </ul>
 	<p>Sponsorship requests take approximately one week to be approved. Once approved, users can begin searching HERON. More detailed instructions are found on our 
 	<a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/sponsorship.html" title ="Sponsorship">HERON Training Pages</a>. </p>
   </div>
@@ -174,9 +167,7 @@
   <p>After completing a HERON query, users may request identified or de-identified data. Identified data requires IRB approval or a QI letter of determination from the IRB.
   Faculty or non-faculty members may create the query. However, non-faculty members will need a faculty sponsor.</p>
   <ol>
-  <li>Faculty members should visit <a href = "https://heron.kumc.edu/heron" title = "HERON"> HERON</a> using the KUMC network or using a 
-  <a href = "https://kumed.sharepoint.com/sites/mykumc/ir/Pages/Remote-Access-to-KUMC-Resources.aspx?wa=wsignin1.0" target = "_blank" title = "Access-to-KUMC-Resources"> KUMC VPN connection </a></li>
-  <li>Follow the "HERON Data Request" under Investigator Resources</li>
+  <li>Click on "HERON Data Request" under Regulatory Requests</li>
   <li>Enter the id(s) for all individuals needing access to the HERON data</li>
   <li>Add all individuals and click "done choosing people"</li>
   <li>Complete the following form and click submit</li>
@@ -186,18 +177,24 @@
   </div>
   
   <div><h2>More Information</h2>
-  <ul>
-	<li>KUMC participates in the <a href = "https://www.gpcnetwork.org/" target = "_blank"> Greater Plains Collaborative (GPC) </a> which is a network of 12 leading medical centers in 8 states. The network brings together data on over 16 million patients. Investigators from KUMC are able to request data from participating sites. </li>
-	<li>Patient recruitment is possible through the <a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/frontierspioneers-registries.html" target = "_blank" title = "Recruitment Registries"> Frontiers and Pioneers Research Registries</a>.</li>
-	<li>HERON data has been cited in several <a href="http://frontiersresearch.org/frontiers/node/452" target = "blank">publications</a>.</li>
-	<li>HERON is supported in part by funds from CTSA Award #UL1TR000001 and Patient-Centered Outcomes Research Institute (PCORI) Program Award #CDRN-1306-04631.</li>
-	</ul>
-   </div>
+    <ul>
+      <li>KUMC participates in the <a href = "https://www.gpcnetwork.org/" target = "_blank"> Greater Plains Collaborative (GPC) </a> which is a network of 12 leading medical centers in 8 states. The network brings together data on over 16 million patients. Investigators from KUMC are able to request data from participating sites. </li>
+      <li>Patient recruitment is possible through the <a href = "http://www.kumc.edu/ea-mi/medical-informatics/heron/frontierspioneers-registries.html" target = "_blank" title = "Recruitment Registries"> Frontiers and Pioneers Research Registries</a>.</li>
+      <li>HERON data has been cited in several <a href="http://frontiersresearch.org/frontiers/node/452" target = "blank">publications</a>.</li>
+      <li>HERON is supported in part by funds from CTSA Award #UL1TR000001 and Patient-Centered Outcomes Research Institute (PCORI) Program Award #CDRN-1306-04631.</li>
+    </ul>
+  </div>
   
   
   <div><h2>Questions?</h2>
 
-  <p>Contact the clinical informatics coordinator at <a  href="mailto:${admin_mailbox}" >${admin_mailbox}</a> or call 913-588-7688.</p>
+  <p><span style="text-decoration: underline;"><em><strong>I need help... what do I do?</strong></em></span></p>
+  <ul>
+    <li><strong>Introduction to REDCap and HERON: </strong>Beginner Training Clinics Tuesdays 12pm-1pm CST. Click <a href="https://redcap.kumc.edu/surveys/?s=L72oqA%20">here</a> to sign up.<em> This is an introduction for new users or users needing a refresher</em></li>
+    <li><strong>For questions or help with projects:</strong> REDCap &amp; HERON Office Hours, Monday &amp; Wednesday 4pm-5pm CST, Friday 9am-10am CST. Click <a href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A">here</a> to sign up.<em> This is not a beginner course; 15-20 min appointment to assist with specific questions</em></li>
+    <li><strong>For support by email:</strong> Contact MI Support at <a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a></li>
+    <li><strong>For project development by MI:</strong> Contact MI Support at <a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a><em> Funding is required</em></li>
+  </ul>
   
 
   </div>
