#6562 update => align heron photo image with the introductory paragraph

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -98,13 +98,16 @@
   <h1>HERON Research Data Repository</h1>
 
   <!-- TODO: why does this para turn blue? -->
-  <p>HERON (Healthcare Enterprise Repository for Ontological Narration) is a search discovery tool that allows KUMC faculty members to search de-identified data 
-  from various hospital and medical center sources including Epic/O2 (the hospital electronic medical record). By combining the various data sources, researchers 
-  can look at the data in new ways not available when viewing data in one source at a time.
-  </p>  
 
   <table cellpadding = "30">
   <tr>
+  <td valign = "top">
+    <p>
+      HERON (Healthcare Enterprise Repository for Ontological Narration) is a search discovery tool that allows KUMC faculty members to search de-identified data 
+      from various hospital and medical center sources including Epic/O2 (the hospital electronic medical record). By combining the various data sources, researchers 
+      can look at the data in new ways not available when viewing data in one source at a time.
+    </p>    
+  </td>
   <td align = "center" valign = "center">
   <br /><img src="av/220px-Heron_tricol_01.JPG" alt="" />
   <br /><small>photo credit:
@@ -185,8 +188,6 @@
     </ul>
   </div>
   
-  
-  <div><h2>Questions?</h2>
 
   <p><span style="text-decoration: underline;"><em><strong>I need help... what do I do?</strong></em></span></p>
   <ul>
