--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -6,6 +6,9 @@
   <link rel="stylesheet" type="text/css" href=
   "https://www.kumc.edu/css/template2009/ku-sec.css" />
   <link rel="shortcut icon" href="https://www.ku.edu/favicon.ico" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href= "av/top_btn.css" />
+  <script src="av/top_btn.js" type= "text/javascript" async></script>
   <script src=
   "https://www.kumc.edu/js/jquery/jquery-1.3.2/jquery-1.3.2.min.js"
   type="text/javascript">
@@ -135,10 +138,7 @@
           </div>
 
           <div id="footerjayhawk" class="span-4">
-            <a href=
-            "https://www.kufrontiers.org#top"><img src="https://www.kumc.edu/Images/icons/uparrow.gif"
-            border="0" alt=
-            "Go to the top of the page" />&#160;top</a>
+           <button onclick="topFunction()" id="scrollBtn" title="Go to the top of the page"><i class="fa fa-chevron-up"></button>
           </div>
 
           <div id="footertagline" class="span-10 last"><img src=
