missing div tag

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -188,16 +188,14 @@
     </ul>
   </div>
   
-
-  <p><span style="text-decoration: underline;"><em><strong>I need help... what do I do?</strong></em></span></p>
-  <ul>
-    <li><strong>Introduction to REDCap and HERON: </strong>Beginner Training Clinics Tuesdays 12pm-1pm CST. Click <a href="https://redcap.kumc.edu/surveys/?s=L72oqA%20">here</a> to sign up.<em> This is an introduction for new users or users needing a refresher</em></li>
-    <li><strong>For questions or help with projects:</strong> REDCap &amp; HERON Office Hours, Monday &amp; Wednesday 4pm-5pm CST, Friday 9am-10am CST. Click <a href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A">here</a> to sign up.<em> This is not a beginner course; 15-20 min appointment to assist with specific questions</em></li>
-    <li><strong>For support by email:</strong> Contact MI Support at <a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a></li>
-    <li><strong>For project development by MI:</strong> Contact MI Support at <a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a><em> Funding is required</em></li>
-  </ul>
-  
-
+  <div>
+    <p><span style="text-decoration: underline;"><em><strong>I need help... what do I do?</strong></em></span></p>
+    <ul>
+      <li><strong>Introduction to REDCap and HERON: </strong>Beginner Training Clinics Tuesdays 12pm-1pm CST. Click <a href="https://redcap.kumc.edu/surveys/?s=L72oqA%20">here</a> to sign up.<em> This is an introduction for new users or users needing a refresher</em></li>
+      <li><strong>For questions or help with projects:</strong> REDCap &amp; HERON Office Hours, Monday &amp; Wednesday 4pm-5pm CST, Friday 9am-10am CST. Click <a href="https://redcap.kumc.edu/surveys/?s=3DHDJMKN4A">here</a> to sign up.<em> This is not a beginner course; 15-20 min appointment to assist with specific questions</em></li>
+      <li><strong>For support by email:</strong> Contact MI Support at <a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a></li>
+      <li><strong>For project development by MI:</strong> Contact MI Support at <a href="mailto:misupport@kumc.edu">misupport@kumc.edu</a><em> Funding is required</em></li>
+    </ul>
   </div>
   </div>
 
