--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -3,27 +3,16 @@
 <py:match path="head" once="true">
    ${select('*')}
 
-  <link rel="stylesheet" type="text/css" href=
-  "https://www.kumc.edu/css/template2009/ku-sec.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/css/template2009/ku-sec.css" />
   <link rel="shortcut icon" href="https://www.ku.edu/favicon.ico" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href= "av/top_btn.css" />
-  <script src="av/top_btn.js" type= "text/javascript" async></script>
-  <script src=
-  "https://www.kumc.edu/js/jquery/jquery-1.3.2/jquery-1.3.2.min.js"
-  type="text/javascript">
-</script>
-  <script src="https://www.kumc.edu/js/ku/kutemplate_2009.js" type=
-  "text/javascript">
-</script>
-  <script src=
-  "https://www.kumc.edu/js/jqueryui/1.7.1/ui.core-1.7.1.js" type=
-  "text/javascript">
-</script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="/av/top_btn.css" />
+  <script async="async" src="/av/top_btn.js" type="text/javascript" async="async"></script>
+  <script src="https://www.kumc.edu/js/jquery/jquery-1.3.2/jquery-1.3.2.min.js" type="text/javascript"></script>
+  <script src="https://www.kumc.edu/js/ku/kutemplate_2009.js" type="text/javascript"></script>
+  <script src="https://www.kumc.edu/js/jqueryui/1.7.1/ui.core-1.7.1.js" type="text/javascript"></script>
 <!-- jquery.showhids.js ? -->
-
 </py:match>
-
 
 <py:match path="body" once="true">
   <div id="kumc_accessibilty_skip">
@@ -138,7 +127,7 @@
           </div>
 
           <div id="footerjayhawk" class="span-4">
-           <button onclick="topFunction()" id="scrollBtn" title="Go to the top of the page"><i class="fa fa-chevron-up"></button>
+           <button onclick="topFunction()" id="scrollBtn" title="Go to the top of the page"><i class="fa fa-chevron-up"></i></button>
           </div>
 
           <div id="footertagline" class="span-10 last"><img src=
