--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="https://www.ku.edu/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="/av/top_btn.css" />
-  <script async="async" src="/av/top_btn.js" type="text/javascript" async="async"></script>
+  <script async="async" src="/av/top_btn.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/js/jquery/jquery-1.3.2/jquery-1.3.2.min.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/js/ku/kutemplate_2009.js" type="text/javascript"></script>
   <script src="https://www.kumc.edu/js/jqueryui/1.7.1/ui.core-1.7.1.js" type="text/javascript"></script>
