--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -118,8 +118,8 @@
 		<li>Vizient (Quality Measure Data - formerly University HealthSystem Consortium)</li> 
 	</ul>
   </td>
-  <td align = "center" valign = "center">
-  <br /><img src="av/220px-Heron_tricol_01.JPG" alt="" />
+  <td align = "center" valign = "top">
+  <img src="av/220px-Heron_tricol_01.JPG" alt="" />
   <br /><small>photo credit:
   <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia"
      >Christopher Harshaw</a></small>
