--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -108,8 +108,8 @@
       can look at the data in new ways not available when viewing data in one source at a time.
     </p>    
   </td>
-  <td align = "center" valign = "center">
-  <br /><img src="av/220px-Heron_tricol_01.JPG" alt="" />
+  <td align = "center" valign = "top">
+  <img src="av/220px-Heron_tricol_01.JPG" alt="" />
   <br /><small>photo credit:
   <a href="https://commons.wikimedia.org/wiki/User:Chrharshaw" title = "wikimedia">Christopher Harshaw</a></small>
   </td>
