--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -2,204 +2,25 @@
       xmlns:py="http://genshi.edgewall.org/">
 <py:match path="head" once="true">
    ${select('*')}
-
-  <link rel="stylesheet" type="text/css" href="https://www.kumc.edu/css/template2009/ku-sec.css" />
-  <link rel="shortcut icon" href="https://www.ku.edu/favicon.ico" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  
+  <link rel="shortcut icon" href="https://www.kumc.edu/_dev/favicon.ico" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton|Muli:300,400,400italic,300italic|Goudy+Bookletter+1911|Oswald&amp;subset=latin,latin-ext" media="all">
+  <link href="https://www.kumc.edu/fontawesome/css/all.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;display=swap" rel="stylesheet">
+  <link href="https://www.kumc.edu/Content/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://www.kumc.edu/Content/css/icon-fonts.css" rel="stylesheet">
+  <link href="https://www.kumc.edu/Content/css/jquery-ui.css" rel="stylesheet">
+  <link href="https://www.kumc.edu/Content/css/target-firefox.css" rel="stylesheet">
+  <link href="https://www.kumc.edu/Content/css/main.css" rel="stylesheet">
+  <link href="https://www.kumc.edu/Content/css/igxdev.css" rel="stylesheet">
+  <link href="https://www.kumc.edu/css/kumc-custom.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/av/top_btn.css" />
   <script async="async" src="/av/top_btn.js" type="text/javascript"></script>
-  <script src="https://www.kumc.edu/js/jquery/jquery-1.3.2/jquery-1.3.2.min.js" type="text/javascript"></script>
-  <script src="https://www.kumc.edu/js/ku/kutemplate_2009.js" type="text/javascript"></script>
-  <script src="https://www.kumc.edu/js/jqueryui/1.7.1/ui.core-1.7.1.js" type="text/javascript"></script>
 <!-- jquery.showhids.js ? -->
 </py:match>
 
 <py:match path="body" once="true">
-  <div id="kumc_accessibilty_skip">
-    <a href="#maincontent" accesskey="2" name="top" id=
-    "top"><img src=
-    "https://www.kumc.edu/Images/template2009/widgets/spacer.gif"
-    alt="Skip redundant pieces" width="1" height="1" border=
-    "0" /></a>
-  </div>
-
-  <div id="kutemplate">
-    <div id="kubackground" class="backgroundblue">
-      <div class="container" id="header">
-
-        <div class="span-24 last">
-          <div id="logo" class="span-9">
-            <a href="http://www.kumc.edu/"><img id="mylogo" class=
-            "png" src=
-            "https://www.kumc.edu/Images/logos/kumclogo_w.png" alt=
-            "KUMC Medical Center" name="mylogo" /></a>
-          </div>
-
-          <div id="buildingicon" class="span-6">
-            &#160;
-          </div>
-
-          <div id="search" class="span-9 last">
-            <form class="search" method="get" action=
-            "http://cgi.kumc.edu/cgi-bin/advsearch">
-              <label for="searchtype" class="hidden" accesskey=
-              "S">Search Type</label><select name="location" id=
-              "searchtype">
-                <option value="1" selected="selected">
-                  Search KUMC web site
-                </option>
-
-                <option value="23">
-                  Search phone directory
-                </option>
-              </select><label for="searchtext" class="hidden"
-              accesskey="I">Search Text</label><input type="text"
-              id="searchtext" name="search" size="20" alt=
-              "enter search terms" class="kumc_searchform input"
-              value="keyword/name" title="keyword/name" style=
-              "margin-left:8px;" /><input class="button" name=
-              "Search" type="image" src=
-              "https://www.kumc.edu/Images/icons/search.gif" alt=
-              "Search" />
-            </form>
-
-            <ul class="links">
-              <li><a href="https://my.kumc.edu/" title=
-              "myKUMC">myKUMC</a></li>
-
-              <li><a href="http://www2.kumc.edu/directory/" title=
-              "Directory">Directory</a></li>
-
-              <li><a href="http://library.kumc.edu/" title=
-              "Library">Library</a></li>
-	      <!-- a-z -->
-	    </ul>
-	  </div>
-	</div>
-
-	<div class="span-24 last" id="topnav">
-	  <h2 class="unit">${select(".//h1/text()")}</h2>
-	  <div id="toptabnav">
-	    <p><a href="http://www.kumc.edu/">KUMC Home</a>&#160;&gt;&#160;<a
-	    href="https://www.kufrontiers.org">Frontiers</a
-	>&#160;&gt;&#160;<a href="https://heron.kumc.edu">HERON</a>
-	    </p>
-	  </div>
-	</div>
-      </div>
-      <!-- printheader -->
-
-      <div id="content" class="container">
-	<div class="span-5">
-	  <div id="leftnavigation">
-	    <div id="menu">
-	      ${select(".//div[@id='menu']/*|text()")}
-	    </div>
-	  </div>
-	</div>
-	
-	<div id="main" class="withnav span-19 last">
-	  <a name="maincontent" id="maincontent"></a>
-	  <div class="span-14">
-	    ${select(".//div[@id='main']/*|text()")}
-	  </div>
-
-	  <div class="span-5 last" id="rightnav">
-	    ${select(".//div[@id='rightnav']/*|text()")}
-	  </div>
-
-	</div>
-      </div>
-    </div>
-
-    <div id="footer">
-      <div id="concave" class="container">
-        <div class="container" id="myfooter">
-          <div id="footercontact" class="span-10">
-            <p><a href=
-            "http://www.kumc.edu/x111.xml"><strong>Contact
-            KUMC</strong></a><br />
-            The University of Kansas<br />
-            Medical Center<br />
-            3901 Rainbow Boulevard<br />
-            Kansas City, KS 66160<br />
-            913-588-5000 | 913-588-7963 TDD</p>
-          </div>
-
-          <div id="footerjayhawk" class="span-4">
-           <button onclick="topFunction()" id="scrollBtn" title="Go to the top of the page"><i class="fa fa-chevron-up"></i></button>
-          </div>
-
-          <div id="footertagline" class="span-10 last"><img src=
-          "https://www.kumc.edu/Images/icons/tagline.png" alt=
-          "Educating Healthcare Professionals Since 1905" /></div>
-        </div>
-      </div>
-
-      <div id="breadcrumbarea">
-        <div id="breadcrumb" class="container"></div>
-      </div>
-
-      <div id="bottomarea">
-        <div id="bottom" class="container">
-          <ul class="links">
-            <li><a href="http://www.kumc.edu/x104.xml" title=
-            "About Us">About Us</a></li>
-
-            <li><a href="http://library.kumc.edu/" title=
-            "Library">Library</a></li>
-
-            <li><a href=
-            "http://www2.kumc.edu/webevent/scripts/webevent.plx?calID=960&amp;userid=guest&amp;cmd=listday"
-            title="Calendar">Calendar</a></li>
-
-            <li><a href="http://www.kumc.edu/x758.xml" title=
-            "Executive Vice Chancellor">Executive Vice
-            Chancellor</a></li>
-
-            <li><a href="http://www.kumc.edu/x111.xml" title=
-            "Maps and Contact Information">Maps and Contact
-            Information</a></li>
-
-            <li><a href="http://www.kumc.edu/x286.xml" title=
-            "Job Opportunities">Job Opportunities</a></li>
-
-            <li><a href="http://www.kumc.edu/x1064.xml" title=
-            "Social Media">Social Media</a></li>
-          </ul>
-
-          <ul class="links"></ul>
-
-          <ul class="links">
-            <li><a href="http://www.kumc.edu/x793.xml">An
-            EO/AA/Title IX Institution</a></li>
-
-            <li><a href="http://www.kumc.edu/x794.xml">Privacy
-            Statement</a></li>
-
-            <li><a href="http://www.kumc.edu/x939.xml">About this
-            Site</a></li>
-
-            <li><a href=
-            "http://www.kumc.edu/x795.xml">Help</a></li>
-          </ul>
-
-          <ul class="links">
-            <li>© <script language="JavaScript" type=
-            "text/javascript">
-//<![CDATA[
-              var d=new Date();
-              yr=d.getFullYear();
-              if (yr!=1863)
-              document.write(yr);
-              //]]>
-              </script> The University of Kansas Medical Center
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-  </div>
+  
 </py:match>
 </div>
